added recognition tracking, removal and situation changes handling
the recognition of situations is tracked (nodered only)
they can also be removed.
when the recognition is removed, the callbacks that would be triggered with this recognition are removed.
